# algo-trader

./: .coverage  .gitignore  ADMIN_GUIDE.md  AGENTS_GUIDE.md  AUDIT_PERF.md  AUDIT_UI.md  BROKER_SPEC.md  CLAUDE.md  CLAUDE_HISTORY.md  DESIGN_GUIDE.md  DESIGN_NOTES.md  LAB_MCP_GUIDE.md  NAVSTRIP_SPEC.md  PROCESS_FLOW.md  PULSE_SPEC.md  README.md  SIMULATOR_GUIDE.md  USER_GUIDE.md  coverage.json  generate_pdf.py  mermaid-filter.err  pytest.ini
backend/: pyproject.toml  requirements-api.txt  requirements.txt
backend/api/: app.py  audit.py  auth_guard.py  background.py  cache.py  database.py  models.py  rate_limit.py  rbac.py  schemas.py
backend/brokers/: __init__.py  base.py  broker_apis.py  capabilities.py  connections.py  errors.py  kite_ticker.py  mmap_ticker.py  rate_limiter.py  registry.py  tick_buffer.py
backend/config/: backend_config.yaml  frontend_config.yaml
backend/conn_client/: __init__.py  api.py  remote_broker.py  sync.py  transport.py
backend/conn_service/: README.md  __init__.py  app.py  routes.py
backend/mcp/: __init__.py  kite_server.py  mcp.example.json
backend/scripts/: visitor_report.py
backend/tests/: __init__.py  conftest.py  test_11_defect_patch.py  test_12_defect_patch.py  test_3tier_audit.py  test_account_order.py  test_accounts_mask.py  test_actions.py  test_actions_preflight_mcx_g1.py  test_agent_close_guards.py  test_agent_cooldown_reset.py  test_agent_evaluator.py  test_agent_suppression.py  test_agents_interpret_helpers.py  test_agents_routes.py  test_alert_routing.py  test_api_routes_post_cutover.py  test_audit_middleware.py  (+211 more)
(+826 files in other folders)
