[project]
name = "ramboq-backend"
version = "0.1.0"
description = "RamboQuant Analytics backend — Litestar API + ARQ worker for Zerodha Kite"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]
exclude = ["backend.workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests (use -m 'not integration' to skip)",
  "unit: marks tests as unit tests",
  "asyncio: marks tests as async (handled by pytest-asyncio)",
]
addopts = "-v --tb=short --strict-markers"
norecursedirs = [".git", ".venv", "venv", "node_modules", "__pycache__", ".pytest_cache"]
